--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,8 +3,14 @@ name: Terraform CI/CD
 on:
   push:
     branches:
-      - '**'   # trigger on all branches
+      - '**'
+    paths:
+      - 'resource/**'
+      - 'module/**'
   pull_request:
+    paths:
+      - 'resource/**'
+      - 'module/**'
 
 jobs:
   terraform:
@@ -13,7 +19,11 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: us-east-1  # change if needed
+      AWS_DEFAULT_REGION: ap-south-1
+
+    defaults:
+      run:
+        working-directory: ./resource   # Terraform root folder
 
     steps:
       - name: Checkout Repository
@@ -22,10 +32,10 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.8.5   # pick your version
+          terraform_version: 1.8.5
 
       - name: Terraform Init
-        run: terraform init -backend-config="key=terraform.tfstate"
+        run: terraform init
 
       - name: Terraform Validate
         run: terraform validate
